--- a/imagepage.html
+++ b/imagepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Page</title>
-    <link rel="stylesheet"  type="text/css" href="imagepage.css">
+    <link rel="stylesheet"  type="text/css" href="imagepage1.css">
     <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=EWFWjt0Bt9esOBW6n0LifNpj5QYrxIavdWKjiXfmtd_RVSLPoROrb9sXXRcldCHNR-BCsbgrcwsjknCQPHJ3x1xtSv07mBRbJx5bR24E4Do" charset="UTF-8"></script></head>
 <body>
     <h1>COMDEIANS</h1>
